tests/snapshots/advisories__crates_io_source_replacement.snap
---
source: tests/advisories.rs
expression: diags
---
[
  {
    "fields": {
      "code": "yanked",
      "graphs": [
        {
          "Krate": {
            "name": "crate-two",
            "version": "0.1.0"
          },
          "parents": [
            {
              "Krate": {
                "name": "yank-check",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 1,
          "line": 2,
          "message": "yanked version",
          "span": "crate-two 0.1.0 registry+https://github.com/EmbarkStudios/cargo-test-index"
        }
      ],
      "message": "detected yanked crate (`cargo update -p crate-two` will most likely not work)",
      "notes": [
        "1 dependent has version requirements that preclude updating:",
        "yank-check = 0.1.0",
        "  - crate-two = '=0.1.0'"
      ],
      "severity": "error"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "code": "yanked",
      "graphs": [
        {
          "Krate": {
            "name": "spdx",
            "version": "0.3.1"
          },
          "parents": [
            {
              "Krate": {
                "name": "yank-check",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 1,
          "line": 7,
          "message": "yanked version",
          "span": "spdx 0.3.1 registry+https://github.com/rust-lang/crates.io-index"
        }
      ],
      "message": "detected yanked crate (`cargo update -p spdx` will most likely not work)",
      "notes": [
        "1 dependent has version requirements that preclude updating:",
        "yank-check = 0.1.0",
        "  - spdx = '=0.3.1'"
      ],
      "severity": "error"
    },
    "type": "diagnostic"
  }
]
