tests/snapshots/advisories__detects_yanked.snap
---
source: tests/advisories.rs
expression: diags
---
[
  {
    "fields": {
      "code": "yanked",
      "graphs": [
        {
          "Krate": {
            "name": "crate-two",
            "version": "0.1.0"
          },
          "parents": [
            {
              "Krate": {
                "name": "yank-check",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 1,
          "line": 2,
          "message": "yanked version",
          "span": "crate-two 0.1.0 registry+https://github.com/EmbarkStudios/cargo-test-index"
        }
      ],
      "message": "detected yanked crate (try `cargo update -p crate-two`)",
      "severity": "error"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "code": "yanked",
      "graphs": [
        {
          "Krate": {
            "name": "spdx",
            "version": "0.3.1"
          },
          "parents": [
            {
              "Krate": {
                "name": "yank-check",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 1,
          "line": 7,
          "message": "yanked version",
          "span": "spdx 0.3.1 registry+https://github.com/rust-lang/crates.io-index"
        }
      ],
      "message": "detected yanked crate (try `cargo update -p spdx`)",
      "severity": "error"
    },
    "type": "diagnostic"
  }
]
