tests/snapshots/advisories__warns_on_ignored_and_withdrawn.snap
---
source: tests/advisories.rs
expression: "diags.iter().find(|diag|\n            field_eq!(diag, \"/fields/code\", \"advisory-not-detected\")).unwrap()"
---
{
  "fields": {
    "code": "advisory-not-detected",
    "graphs": [],
    "labels": [
      {
        "column": 12,
        "line": 2,
        "message": "no crate matched advisory criteria",
        "span": "RUSTSEC-2020-0053"
      }
    ],
    "message": "advisory was not encountered",
    "severity": "warning"
  },
  "type": "diagnostic"
}
